--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ bevy_webgl2 = {version="0.4.0", optional=true}
 rand = "0.6.5"   
 
 winit = {version = "0.24.0"}
-rand = "0.7"
+# rand = "0.7"
 getrandom = {version="0.1", features=["wasm-bindgen"]}
 
 # [patch.'https://github.com/bevyengine/bevy']
