--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,18 +19,18 @@ native = [
   "bevy/bevy_wgpu",
 ]
 
-web = [
-  "bevy_webgl2"
-]
+#web = [
+#  "bevy_webgl2"
+#]
 
 [dependencies]
 bevy = {version="0.4.0", default-features=false}
-bevy_webgl2 = {version="0.4.0", optional=true}
+# bevy_webgl2 = {version="0.4.0", optional=true}
 rand = "0.6.5"   
 
-winit = {version = "0.24.0"}
+# winit = {version = "0.24.0"}
 # rand = "0.7"
-getrandom = {version="0.1", features=["wasm-bindgen"]}
+# getrandom = {version="0.1", features=["wasm-bindgen"]}
 
 # [patch.'https://github.com/bevyengine/bevy']
 # bevy = {git = "https://github.com/bevyengine/bevy//", rev="841755aaf23acfd55b375c37390daeb302c5b30b", default-features=false}
